Revision history for perl distribution Convos

0.99_29 Not Released
 - Fix ShareDialog plugin
 - Fix custom assets with Mojolicious::Plugin::AssetPack 1.41
 - Add production 404 and 500 pages
 - Remove "beforeConvosStart" JavaScript event
 - Bump Mojolicious version to 7.29

0.99_28 2017-03-15T01:34:20+0100
 - Fix keeping scroll at bottom in Firefox #324
 - Fix messages are grouped incorrectly on scrollback #301
 - Fix showing "Day changed" in historic messages
 - Will not mark message as "highlight" if sent by yourself

0.99_27 2017-03-01T23:20:11+0100
 - Fix going to connection dialog after connection save
 - Fix hitting enter/return inside the "Dialog name" field on "Join dialog"
 - Fix joining channel which you are already part of
 - Fix reading invite_code from config file #322
 - Will detect if Javascript is disabled and notify user
 - Add support for embedding gist and other pasted text files
 - Add support for notifications on keywords #142

0.99_26 2017-02-20T23:11:01+0100
 - Fix scrolling of sidebars and main menu
 - Change "Edit profile" to "Settings"

0.99_25 2017-02-20T22:46:07+0100
 - Fix sending server messages to the right dialog
 - Fix joining a dialog by clicking on the dialog name
 - Fix first shown channel shows all users inactive #321
 - Fix creating dialog on /QUERY
 - Fix notifications are disabled when window is active
 - Add better handling of "create dialog" errors
 - Add functionality to only enrich visible links
 - Add better "rich link" caching
 - Add "Convos icon" to notification popup
 - Change default sorting to "lastRead"

0.99_24 2017-01-29T00:57:30+0100
 - Fix registration process
 - Fix being able to show profile + help during wizard
 - Fix width of embedded youtube videos on small screens
 - Fix zooming images inline in chat
 - Fix not matching markdown, because a link was injected
 - Fix "/me message your_nick" mention rendering
 - Fix markdown rendering
 - Improved materialbox rendering for huge images