@@ -141,11 +141,14 @@ sub _config {
   $config->{contact}           ||= $ENV{CONVOS_CONTACT}           || 'mailto:root@localhost';
   $config->{default_server}    ||= $config->{forced_irc_server}   || $ENV{CONVOS_DEFAULT_SERVER};
   $config->{forced_irc_server} ||= $ENV{CONVOS_FORCED_IRC_SERVER} || '';
-  $config->{home}
-    ||= $ENV{CONVOS_HOME} || path(File::HomeDir->my_home, qw(.local share convos))->to_string;
+  $config->{home}              ||= $ENV{CONVOS_HOME}
+    ||= path(File::HomeDir->my_home, qw(.local share convos))->to_string;
   $config->{organization_url}  ||= $ENV{CONVOS_ORGANIZATION_URL}  || 'http://convos.by';
   $config->{organization_name} ||= $ENV{CONVOS_ORGANIZATION_NAME} || 'Convos';
   $config->{secure_cookies}    ||= $ENV{CONVOS_SECURE_COOKIES}    || 0;
+
+  $self->log->info(
+    qq(CONVOS_HOME="$ENV{CONVOS_HOME}" # https://convos.by/doc/config.html#convos_home"));
 
   # public settings
   $config->{settings} = {
@@ -199,7 +202,8 @@ sub _setup_secrets {
 
   unless (@$secrets) {
     my $unsafe = join ':', $<, $(, $^X, qx{who -b 2>/dev/null}, $self->home;
-    $self->log->warn('Using default (unsafe) session secrets. (Config file was not set up)');
+    $self->log->warn(
+      'CONVOS_SECRETS="Default (unsafe)" # https://convos.by/doc/config.html#convos_secrets');
     $secrets = [Mojo::Util::md5_sum($unsafe)];
   }
 
